Correctif de la ou aller taper l'endpoint. Ca marchait pour les tests car on regardait dans /api/ mais pas pour les use case normaux.
